--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="submit" id="submit">	
         </form>
         
-        <p id="#section"></p>
+        <p id="section"></p>
         
         <script>
             var url = 'http://metservice.com/publicData/localForecastwellington';
