--- a/index.html
+++ b/index.html
@@ -8,25 +8,12 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.1/handlebars.min.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ7402uvsGRTOP_pqKkRm3fjWXbeIJ7pg"></script>
-        <script src="js/weather.js"></script>
 	</head>
 	<body>   
         <h1>Getting API's and Database to Work: Tech Lab</h1>
         <h2>Current Location (make sure is enabled): <div id="locDisp"></div></h2>
         <h2>Weather API Implemention</h2>
-        <div class="container">
-            <div class="row">
-                <h1 class="text-center">Wellington</h1>
-                <div class="col-sm-6">
-                    <h2>Current Conditions</h2>
-                    <h3 id="current"></h3>
-                </div>
-                <div class="col-sm-6">
-                    <h2>Forecast</h2>
-                    <h3 id="forecast"></h3>
-                </div>
-            </div>
-        </div>
+        <p id="weatherDisp"></p>
         
         <form>
             <p>Enter your outfit:</p>
