--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Getting API's and Database to Work: Tech Lab</h1>
         <h2>Current Location (make sure is enabled): <div id="locDisp"></div></h2>
         <h2>Weather API Implemention</h2>
-        <p id="weatherDisp"></p>
+        <h2>Current Temperature: <div id="weatherDisp"></div></h2>
         <input type="number" min="0" max="1" step="0.1" value="0.5" />
         <input type="range" min="10" max="1000" step="10" value="300" data-orientation="horizontal"/>
         <form>
