--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </div>
         <div id="othersData">
             <h1>What Others are Wearing</h1>
+            <p>(Currently under development so will only show what people are wearing in Wellington)</p>
             <div id="change"></div>    
         </div>
         <div id="enterData">
