--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="landingPage">
             <h1>Welcome to WeatherWear!</h1>
             <p>The aim of this web app is to provide a humanised view of weather data - suitable clothing for the day.</p>
-            <p>This is acheived through three different functionalitys:</p>
+            <p>This is acheived through three different functionalities:</p>
             <ul>
                 <li>Check out the recommended clothing layers with data provided by the MetService.</li>
                 <li>See what others in your area are wearing. (Currently under development so will only show what people are wearing in Wellington)</li>
