--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <li>Help us out and enter your own outfit of the day.</li>
             </ul>
             <p>First make sure you have allowed your location and you can see your city in the top left corner and the current temperature in the top right then click any of the three respective icons in the navigation at the top of the page to begin.</p>
+            <p>Thanks to <a href="http://metservice.com/national/home">MetService</a> for weather data and <a href="https://www.google.co.nz/">Google</a> for geolocation.</p>
         </div>
         <div id="metservData">
             <h1>MetService Outfit</h1>
