--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p><div id="weatherDisp"></div></p>
             <p><div id="layersDisp"></div></p>
             <p><div id="rainDisp"></div></p>
-            <p>Data provided byt <a href="http://metservice.com/national/home">MetService</a>.</p>
+            <p>Data provided by <a href="http://metservice.com/national/home">MetService</a>.</p>
         </div>
         <div id="othersData">
             <h1>What Others are Wearing</h1>
