--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </form> 
         </div>
         <div id="footerBar">
-            <p>Sophie Price // MDDN352 // Project 2 // 2016 // Victoria University of Wellington</p>   
+            <p>© Sophie Price - All Rights Reserved // Project 2 for MDDN352 // 2016 // Victoria University of Wellington</p>   
         </div>     
 <!-- ------SCRIPTS AND PLUGINS----- -->
         <script id="home-template" type="text/x-handlebars-template">
