--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="css/skeleton.css">
         <link rel="stylesheet" href="css/rangeslider.css">
         <link rel="stylesheet" href="css/style.css">       
-<!-- ------FAVICON------- -->    
+<!-- ------FAVICON AND APP ICON------- -->    
         <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="apple-touch-icon" type="image/png" href="images/touchicon.png">
 	</head>
 	<body>  
 <!-- ------MAIN PAGE LAYOUT------- -->
