--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
                 <div class="one-third column">
                     <div id="barLocDisp" class="headBarTxt">.</div>
                     <select id="inputCity" name="cityEnter">
-	                   <option value="Wellington">Wellington</option>
-                       <option value="Invercargill">Invercargill</option>
-	                   <option value="Auckland">Auckland</option>
-	                   <option value="Nelson">Nelson</option>
+                    	<option value="locate">Locate Automatically</option>
+	                <option value="Wellington">Wellington</option>
+                	<option value="Invercargill">Invercargill</option>
+	                <option value="Auckland">Auckland</option>
+	                <option value="Palmerston North">Palmerston North</option>
+	                <option value="Nelson">Nelson</option>
+	                <option value="Tauranga">Tauranga</option>
                     </select>
-<!--                    <button id="cityBtn">Change</button>-->
                 </div>
                 <div class="one-third column">
                     <img id="logo" src="images/weatherwear.png">
