--- a/index.html
+++ b/index.html
@@ -22,12 +22,23 @@
                     <div id="barLocDisp" class="headBarTxt">.</div>
                     <select id="inputCity" name="cityEnter">
                     	<option value="locate">Locate Automatically</option>
-	                <option value="Wellington">Wellington</option>
+                    	<option value="Auckland">Auckland</option>
+                    	<option value="Blenheim">Blenheim</option>
+                    	<option value="Christchurch">Christchurch</option>
+                    	<option value="Dunedin">Dunedin</option>
+                    	<option value="Greymouth">Greymouth</option>
+                    	<option value="Hamilton">Hamilton</option>
                 	<option value="Invercargill">Invercargill</option>
-	                <option value="Auckland">Auckland</option>
+                	<option value="Napier">Napier</option>
+                	<option value="Nelson">Nelson</option>
+                	<option value="New Plymouth">New Plymouth</option>
 	                <option value="Palmerston North">Palmerston North</option>
-	                <option value="Nelson">Nelson</option>
+	                <option value="Queenstown">Queenstown</option>
 	                <option value="Tauranga">Tauranga</option>
+	                <option value="Timaru">Timaru</option>
+	                <option value="Wanaka">Wanaka</option>
+	                <option value="Wellington">Wellington</option>
+	                <option value="Whangarei">Whangarei</option>
                     </select>
                 </div>
                 <div class="one-third column">
