--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>This is acheived through three different functionalities:</p>
             <ul>
                 <li>Check out the recommended clothing layers with data provided by the MetService.</li>
-                <li>See what others in your area are wearing. (Currently under development so will only show what people are wearing in Wellington)</li>
+                <li>See what others in your area are wearing.</li>
                 <li>Help us out and enter your own outfit of the day.</li>
             </ul>
             <p>First make sure you have allowed your location and you can see your city in the top left corner and the current temperature in the top right then click any of the three respective icons in the navigation at the top of the page to begin.</p>
