--- a/index.html
+++ b/index.html
@@ -137,6 +137,6 @@
         <script src="js/rangeslider.min.js"></script>   
         <script src="js/packery.pkgd.min.js"></script>
         <script src="js/draggabilly.pkgd.min.js"></script>
-        <script src="js/new.js"></script> 
+        <script src="js/app.js"></script> 
 	</body>
 </html>
