--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 </ul>
                 <p>First make sure you have allowed your location and you can see your city in the top left corner or select a city manually using the geolocation icon next to the help icon. When you are ready click any of the three respective icons in the navigation at the bottom of the page to begin.</p>
                 <p>Thanks to <a href="http://metservice.com/national/home">MetService</a> for weather data and <a href="https://www.google.co.nz/">Google</a> for geolocation.</p>
+                <p>Also used were the awesome plugins <a href="http://packery.metafizzy.co/">Packery</a> and <a href="http://rangeslider.js.org/">Rangeslider.js</a>.</p>
                 <br>
                 <p>© Sophie Price - All Rights Reserved // Project 3 for MDDN352 // 2016 // Victoria University of Wellington</p> 
             </div>
